hphp/test/zend7/tests/lang/foreachLoopIterator.002.php.expectf
-----( Try to iterate with &$value: )-----

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %s on line 13